# nseg-mcp

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
src/nseg_mcp/: __init__.py  __main__.py  cpacs_adapter.py  main.py  server.py  session_manager.py
src/nseg_mcp/physics/: __init__.py  atmosphere.py  performance.py  segments.py
src/nseg_mcp/tools/: __init__.py  check_constraints.py  configure_mission.py  create_mission.py  get_results.py  get_trajectory.py  run_mission.py  set_segments.py  set_vehicle.py
tests/: test_atmosphere.py  test_mission_e2e.py  test_ovs_cpacs.py
